# cuda_deduplicator

./: CMakeLists.txt  CudaLibDetect.cmake  DyninstInstall.cmake  README.md
graphs/: createSCGraphs.py  cuCtxSynchronize.dot  cuCtxSynchronize_graph_SC.dot  cuCtxSynchronize_orig.dot  cuMemFree_v2.dot  cuMemcpyDtoHAsync_v2.dot  cuMemcpyDtoHAsync_v2_straight.dot  cuMemcpyDtoH_v2.dot  cuStreamSynchronize.dot  diafix.dot  diafix_memcpyAsync.dot  fixDots.py
settings_files/cuibm/: launch_ls.sh
settings_files/cumf_als/: launch_ls.sh  launch_mr.sh  launch_st.sh  launch_ts.sh
spack/cudadedup/: package.py
src/analysis/: CMakeLists.txt  CheckLSDecode.py  CompareOutputs.py  DisplayFormatter.py  Driver.py  Driver2.py  FI_TraceBin.py  LS_TraceBin.py  MoveResults.py  ReadStackFiles.py  SequentialDump.py  SetupRunDir.py  TF_trace.py  TemplateFolder.py  View1.py  View2.py  View3.py  View4.py  View5.py  View6.py
src/analysis/useafter/: LS_log.txt  LS_stackkey.txt  LS_tracekey.txt
src/common/: CMakeLists.txt  LogInfo.h  WrapperMacros.h
src/deduplicate/: CMakeLists.txt  CUPTIEventHandler.cpp  CUPTIEventHandler.h  CalculateDedupSavings.cpp  CalculateDedupSavings.h  CalculateMain.cpp  CudaDeviceWrappers.cpp  CudaWrapper.h  DestinationHash.cpp  DestinationHash.h  DuplicateTracker.cpp  DuplicateTracker.h  HashData.cpp  HashData.h  InstrumentBase.h  InstrumentFactory.cpp  InstrumentFactory.h  StacktraceGen.cpp  StacktraceGen.h  TransferBase.cpp  TransferBase.h  TransferTimeline.cpp  TransferTimeline.h  deduplicator.cpp  deduplicator.h
src/deduplicate/defs/: DetectDuplicates.def.in
src/deduplicate/support/: CalculateTS.py  CorrelationRun.py  FileClasses.py  GenCorrelation.py  GenRuntimeCIBs.py.in  MatchIDs.py  ReadCUPTIEvents.py  ReadTimingEvents.py  TestRun.py  timing_info.txt
src/driverapi/: CMakeLists.txt  DriverAPIHeader.h  DriverAPIWrappers.cpp  DriverWrapperBase.cpp  DriverWrapperBase.h  DriverWrapperFactory.cpp  DriverWrapperFactory.h  HelperFunctions.h  InterpositionHeader.h  InterpositionWrappers.cpp  MemoryTransfer.cpp  MemoryTransfer.h  Parameters.cpp  Parameters.h  PluginCommon.h  StackTraceGen.h  StubLib.cpp  dlsym_wrapper.cpp
src/driverapi/defs/: DriverAPIWrapper.def.in
src/driverapi/launcher/: APICaptureInstrimentation.cpp  APICaptureInstrimentation.h  BPatchBinary.cpp  BPatchBinary.h  BinaryLocationIDMap.cpp  BinaryLocationIDMap.h  BinaryRewriter.cpp  BinaryRewriter.h  CMakeLists.txt  CallIDGenerator.h  CallTracingModules.skip  CallTransformation.cpp  CallTransformation.h  Common.cpp  Common.h  Constants.h.in  DebugInstrimentationTemp.h  DependsFile.h  DetectDuplicateStackpoints.h  DynOpsClass.cpp  DynOpsClass.h  DyninstCallsite.cpp  DyninstCallsite.h  DyninstFunction.cpp  DyninstFunction.h  DyninstFunctionWraps.cpp  DyninstFunctionWraps.h  DyninstIncludes.h  DyninstProcess.cpp  DyninstProcess.h  FixCudaFree.cpp  FixCudaFree.h  FixCudaProblems.cpp  FixCudaProblems.h  GeneralFunctions.cpp  GeneralFunctions.h  InstWrapper.cpp  InstWrapper.h  InstrimentationLogger.cpp  InstrimentationLogger.h  (+55 more)
src/driverapi/plugins/: CMakeLists.txt
src/driverapi/plugins/DriverAPITrace/: DriverAPITrace.cpp  DriverAPITrace.h
src/driverapi/plugins/FindSyncHelper/: FindSyncHelper.cpp
src/driverapi/plugins/common/: CMakeLists.txt  StackwalkingCommon.cpp  StackwalkingCommon.h
src/driverapi/plugins/cupti/: CMakeLists.txt  CUPTIEventHandler.cpp  CUPTIEventHandler.h
src/driverapi/plugins/datasynctimer/: DataSyncTimer.cpp  DataSyncTimer.h
src/driverapi/plugins/datatransfer/: DataTransfer.cpp
src/driverapi/plugins/echo/: CMakeLists.txt  echo.cpp  echo.h
src/driverapi/plugins/memmanager/: CMakeLists.txt  MemManager.cpp
src/driverapi/plugins/memrecorder/: CMakeLists.txt  MemRecorder.cpp
src/driverapi/plugins/stacktrace/: CMakeLists.txt  STraceWrapSync.cpp  Stacktrace.cpp
src/driverapi/plugins/synchtool/: CMakeLists.txt  CheckAccesses.cpp  CheckAccesses.h  LoadStoreDriver.cpp  LoadStoreDriver.h  MemoryRange.h  OutputWriter.cpp  OutputWriter.h  SynchTool.cpp  SynchTool.h
src/driverapi/plugins/timecall/: CMakeLists.txt  TimeCall.cpp  TimeCall.h
src/driverapi/plugins/timetofirstuse/: CheckAccesses.cpp  OutputWriter.cpp
src/driverapi/plugins/transfer_timeline/: TransferTImeline.h  TransferTimeline.cpp  TransferTimeline.h
src/driverapi/support/: BuildGetParamsHeaders.py  BuildInterpositionWrappers.py  BuildWrappers.py  InterpositionTemplate.txt  WrapperTemplate.txt  cudaFunctionProtos.txt
src/experiments/: ArtificialDelay.cu
src/inst_lib/: CMakeLists.txt  inst.cpp  inst.h
src/python_wrapper/: Instriment_Binary.py  PyInstriment.py
src/scripts/: BuildInstrimentation.sh.in  CMakeLists.txt  SetEnv.sh.in  inst_app.sh.in
src/tests/: BaseTesting.h  CMakeLists.txt  DumpFunctionNames.cpp  DyninstSanity.cpp  FindPtrFunctions.cpp  GenStacktraceThirdParty.cpp  GetCalledFuncs.cpp  GetExportTableTest.cpp  PerfEstimateCheck.cpp  RunTests.sh.in  SmallModify.cpp  TestDedupSavings.cpp  TestDedupSavings.h  TestInstrimentation.cpp  basic_checker_test.cpp  cupti_test.cpp  launch_check.cpp
