install(FILES ${PROJECT_SOURCE_DIR}/src/analysis/Driver.py 
		${PROJECT_SOURCE_DIR}/src/analysis/DumpHexFile.py
		${PROJECT_SOURCE_DIR}/src/analysis/LS_TraceBin.py
		${PROJECT_SOURCE_DIR}/src/analysis/TF_trace.py
		${PROJECT_SOURCE_DIR}/src/analysis/ReadStackFiles.py
		${PROJECT_SOURCE_DIR}/src/analysis/cudaFunctions.txt
		DESTINATION bin)